# kalive

./: Cargo.toml  PRIVACY.md  README.md
Avganar/: manifest.xml
Avganar/resources-deu/: strings.xml
Avganar/resources/strings/: strings.xml
Avganar/source/data/entity/: Departure.mc  Stop.mc
Avganar/source/data/network/: DeparturesService.mc  NearbyStopsService.mc
Avganar/source/data/storage/: FavoriteStopsStorage.mc  NearbyStopsStorage.mc
Avganar/source/ui/setting/: SettingsMenuDelegate.mc
Avganar/source/ui/stopdetail/: StopDetailDelegate.mc  StopDetailView.mc  StopDetailViewModel.mc
Avganar/source/ui/stoplist/: StopListView.mc
Avganar/source/ui/widget/: RadioMenuDelegate.mc
Avganar/source/util/: AppColors.mc  ArrUtil.mc  DictUtil.mc  Footprint.mc  MathUtil.mc  TimerWrapper.mc  WidgetUtil.mc
kalive/: .gitignore  manifest.xml
kalive-api/src/: lib.rs  main.rs  trias.rs
kalive/resources/: convert-icon.sh
kalive/source/: App.mc
kalive/source/data/entity/: Departure.mc  StopDouble.mc
kalive/source/data/network/: DeparturesService.mc
kalive/source/ui/setting/: OptionsMenuDelegate.mc
kalive/source/ui/stopdetail/: StopDetailView.mc  StopDetailViewModel.mc
kalive/source/ui/stoplist/: StopListViewModel.mc
kalive/source/util/: ArrUtil.mc  TimeUtil.mc
presentation/: description-deu.md  description.md
src/: lib.rs  main.rs  trias.rs
