[package]
name = "kalive-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.37"
quick-xml = "0.31.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
